src/test/deca/syntax/valid/created/ifthenelse++.deca
{
	if(5 > 2){
		print("if");
		print("of");
	}
	else{
	}
	if(2 < 5){
		if(3 < 2){
			print("if");
			print("of");
			print("if");
			print("of");
		}
		else if(2 < 5){
		}
		else if (2== 5){
		}
	}
	else{
	}

}
