src/test/deca/syntax/invalid/created/else.deca
{
	if (4 < 5) {
		}
	else (
		)
}